--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/e_university
-spring.datasource.username=roman
+spring.datasource.url=jdbc:postgresql://localhost:5432/mvc
+spring.datasource.username=postgres
 spring.datasource.password=kalipso231094
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
